fixed spacing error with favorite button

--- a/src/app/shop/product-item/product-item.component.css
+++ b/src/app/shop/product-item/product-item.component.css
@@ -26,6 +26,7 @@ label input[type="checkbox"] {
 
 .custom-checkbox {
   margin-left: 2em;
+  margin-right: 2em;
   position: relative !important;
   cursor: pointer;
 }
